Add get application data function
