# api_docs/swagger.json
@@ -1,7 +1,7 @@
 {
   "swagger": "2.0",
   "info": {
-    "version": "1.25",
+    "version": "1.3",
     "title": "Experiment server",
     "description": "API for experiments",
     "license": {
@@ -232,7 +232,10 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/Application"
+            }
           }
         }
       }
@@ -343,7 +346,10 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/ConfigurationKey"
+            }
           },
           "400": {
             "description": "Bad Request"
@@ -436,6 +442,53 @@
             "schema": {
               "$ref": "#/definitions/ExclusionConstraint"
             }
+          }
+        }
+      }
+    },
+    "/applications/{id}/data": {
+      "get": {
+        "tags": [
+          "application"
+        ],
+        "summary": "Get all configurationkeys and rangeconstraints of one application",
+        "parameters": [
+          {
+            "name": "id",
+            "type": "integer",
+            "description": "id of the application",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "object",
+              "allOf": [
+                {
+                  "$ref": "#/definitions/Application"
+                }
+              ],
+              "properties": {
+                "rangeconstraints": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/definitions/RangeConstraint"
+                  }
+                },
+                "configurationkeys": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/definitions/ConfigurationKey"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
       }
@@ -787,6 +840,34 @@
             "description": "Bad Request"
           }
         }
+      },
+      "post": {
+        "tags": [
+          "experiments"
+        ],
+        "summary": "Create new experiment",
+        "parameters": [
+          {
+            "name": "experiment",
+            "in": "body",
+            "description": "Experiment to create",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/NewExperiment"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/Experiment"
+            }
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
       }
     },
     "/experiments/{id}": {
@@ -864,38 +945,6 @@
                 "$ref": "#/definitions/User"
               }
             }
-          },
-          "400": {
-            "description": "Bad Request"
-          }
-        }
-      }
-    },
-    "/experiments/{expid}/experimentgroups/{expgroupid}": {
-      "delete": {
-        "tags": [
-          "experiments"
-        ],
-        "summary": "Delete experimentgroup from one experiment",
-        "parameters": [
-          {
-            "name": "expid",
-            "type": "integer",
-            "description": "id of the experiment",
-            "in": "path",
-            "required": true
-          },
-          {
-            "name": "expgroupid",
-            "type": "integer",
-            "description": "id of the experimentgroup",
-            "in": "path",
-            "required": true
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
           },
           "400": {
             "description": "Bad Request"
@@ -1233,6 +1282,35 @@
           "items": {
             "$ref": "#/definitions/ExperimentGroup"
           }
+        },
+        "size": {
+          "type": "integer"
+        }
+      }
+    },
+    "NewExperiment": {
+      "type": "object",
+      "required": [
+        "name",
+        "application_id",
+        "startDatetime",
+        "endDatetime",
+        "size"
+      ],
+      "properties": {
+        "application_id": {
+          "type": "integer"
+        },
+        "name": {
+          "type": "string"
+        },
+        "startDatetime": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "endDatetime": {
+          "type": "string",
+          "format": "date-time"
         },
         "size": {
           "type": "integer"
